rename some notebooks

--- a/notebooks/03-markdown.ipynb
+++ b/notebooks/03-markdown.ipynb
@@ -12,87 +12,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:100% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>.output_result { width:100% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "from IPython.core.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
-    "display(HTML(\"<style>.output_result { width:100% !important; }</style>\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
-      "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
-      "    \n",
-      "    .. math::\n",
-      "        B_{i,0}(x) := \\left\\{\n",
-      "        \begin{matrix}\n",
-      "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\n",
-      "        0 & \\mathrm{otherwise} \n",
-      "        \\end{matrix}\n",
-      "        \r",
-      "ight.\n",
-      "    \n",
-      "    .. math::\n",
-      "            B_{i,p}(x) := \f",
-      "rac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
-      "            + \f",
-      "rac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
-      "    \n",
-      "     \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(bspline.__doc__)"
+    "La documentation des fonctions Julia est en markdown. Il n'y a pas de système de documentation intégré pour la langage R mais [roxygen2](https://cran.r-project.org/web/packages/roxygen2/) est le package utilisé. La syntaxe a des similarités avec [LaTeX](https://fr.wikipedia.org/wiki/LaTeX)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La documentation des fonctions Julia est en markdown. Il n'y a pas de système de documentation intégré pour la langage R mais [roxygen2](https://cran.r-project.org/web/packages/roxygen2/) est le package utilisé. La syntaxe a des similarités avec [LaTeX](https://fr.wikipedia.org/wiki/LaTeX)\n",
-    "\n",
     "Les fichiers markdown sont identifiés par la terminaison `.md`.\n",
     "\n",
-    "Dans les exemples qui vont suivre, je présente les bases du langage markdown. Il faut savoir qu'il existe un grand nombre de dialectes. Github propose des fonctionalités enrichies. Pour voir toutes les possibilités, je conseille d'aller regarder la démonstration de l'éditeur en ligne [codimd](https://demo.codimd.org/features).\n",
-    "\n",
+    "Dans les exemples qui vont suivre, je présente les bases du langage markdown. Il faut savoir qu'il existe un grand nombre de dialectes. Github propose des fonctionalités enrichies. Pour voir toutes les possibilités, je conseille d'aller regarder la démonstration de l'éditeur en ligne [codimd](https://demo.codimd.org/features)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Titres\n",
     "\n",
     "Recopier le texte suivant dans une cellule en mode `markdown`. Cliquer sur la partie gauche et appuyer sur `M`. Puis exécuter avec `shift-enter`.\n",
@@ -109,7 +47,7 @@
     "\n",
     "Section\n",
     "---------\n",
-    "```\n"
+    "```"
    ]
   },
   {
