--- a/notebooks/07-exemple-julia.ipynb
+++ b/notebooks/07-exemple-julia.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "bspline"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,79 +62,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "search: \u001b[0m\u001b[1mb\u001b[22m\u001b[0m\u001b[1ms\u001b[22m\u001b[0m\u001b[1mp\u001b[22m\u001b[0m\u001b[1ml\u001b[22m\u001b[0m\u001b[1mi\u001b[22m\u001b[0m\u001b[1mn\u001b[22m\u001b[0m\u001b[1me\u001b[22m\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "\\begin{verbatim}\n",
-       "bspline(p, j, x)\n",
-       "\\end{verbatim}\n",
-       "Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j. Implemented recursively using the \\href{https://en.wikipedia.org/wiki/De_Boor%27s_algorithm}{De Boor's Algorithm}\n",
-       "\n",
-       "$$B_{i,0}(x) := \\left\\{\n",
-       "\\begin{matrix}\n",
-       "1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\\\n",
-       "0 & \\mathrm{otherwise} \n",
-       "\\end{matrix}\n",
-       "\\right.$$\n",
-       "$$B_{i,p}(x) := \\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
-       "+ \\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).$$\n"
-      ],
-      "text/markdown": [
-       "```\n",
-       "bspline(p, j, x)\n",
-       "```\n",
-       "\n",
-       "Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j. Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
-       "\n",
-       "$$\n",
-       "B_{i,0}(x) := \\left\\{\n",
-       "\\begin{matrix}\n",
-       "1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\\\n",
-       "0 & \\mathrm{otherwise} \n",
-       "\\end{matrix}\n",
-       "\\right.\n",
-       "$$\n",
-       "\n",
-       "$$\n",
-       "B_{i,p}(x) := \\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
-       "+ \\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
-       "$$\n"
-      ],
-      "text/plain": [
-       "\u001b[36m  bspline(p, j, x)\u001b[39m\n",
-       "\n",
-       "  Return the value at x in [0,1[ of the B-spline with integer nodes of degree\n",
-       "  p with support starting at j. Implemented recursively using the De Boor's\n",
-       "  Algorithm (https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
-       "\n",
-       "\u001b[35m  B_{i,0}(x) := \\left\\{\u001b[39m\n",
-       "\u001b[35m\\begin{matrix}\u001b[39m\n",
-       "\u001b[35m1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\\\u001b[39m\n",
-       "\u001b[35m0 & \\mathrm{otherwise} \u001b[39m\n",
-       "\u001b[35m\\end{matrix}\u001b[39m\n",
-       "\u001b[35m\\right.\u001b[39m\n",
-       "\n",
-       "\u001b[35m  B_{i,p}(x) := \\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \u001b[39m\n",
-       "\u001b[35m+ \\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\u001b[39m"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "Switch the next cell from `Markdown` to `Code` format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "?bspline"
    ]
