--- a/notebooks/08-exemple-python.ipynb
+++ b/notebooks/08-exemple-python.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,43 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
-      "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
-      "\n",
-      "    .. math::\n",
-      "        B_{i,0}(x) := \\left\\{\n",
-      "        \begin{matrix}\n",
-      "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\n",
-      "        0 & \\mathrm{otherwise} \n",
-      "        \\end{matrix}\n",
-      "        \r",
-      "ight.\n",
-      "\n",
-      "    .. math::\n",
-      "            B_{i,p}(x) := \f",
-      "rac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
-      "            + \f",
-      "rac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
-      "\n",
-      "     \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(bspline.__doc__)"
+    "# print(bspline.__doc__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -106,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "lines_to_next_cell": 2
    },
