rename first notebook

--- a/notebooks/01-jupyter.ipynb
+++ b/notebooks/01-jupyter.ipynb
@@ -8,7 +8,9 @@
     }
    },
    "source": [
-    "# Installation\n",
+    "# Jupyter\n",
+    "\n",
+    "## Installation\n",
     "\n",
     "Pour construire note site, nous avez besoin d'une distribution Python. [Miniconda](https://conda.io/miniconda.html) est une solution légère permettant d'installer tous les packages nécessaires.\n",
     "\n",
@@ -23,12 +25,12 @@
     }
    },
    "source": [
-    "## Environement conda\n",
+    "### Environement conda\n",
     "\n",
     "```bash\n",
     "git clone https://gitlab.math.unistra.fr/navaro/agrocampus\n",
-    "# # cd agrocampus\n",
-    "conda env create\n",
+    "cd agrocampus\n",
+    "conda env create -n agrocampus\n",
     "```\n",
     "\n",
     "[documentation](https://conda.io/docs/using/envs.html)."
@@ -49,7 +51,7 @@
     }
    },
    "source": [
-    "## Activer l'environment conda\n",
+    "### Activer l'environment conda\n",
     "\n",
     "Lorsque vous activer l'environement conda, votre configuration du terminal est modifiée et la version\n",
     "de python qui sera disponible sera celle ou tous nos packages seront installés.\n",
@@ -92,11 +94,6 @@
     "## Installation with conda\n",
     "```bash\n",
     "conda install -c conda-forge jupyter\n",
-    "```\n",
-    "\n",
-    "## with pip\n",
-    "```bash\n",
-    "pip install jupyter\n",
     "```"
    ]
   },
@@ -113,13 +110,14 @@
     "### Avec conda\n",
     "\n",
     "Pour installer `numpy` du canal *conda-forge*\n",
-    "```python\n",
-    "# # %conda install -c conda-forge numpy\n",
+    "```ipython\n",
+    "%conda install -c conda-forge numpy\n",
     "```\n",
     "\n",
     "### Avec pip\n",
-    "```\n",
-    "# # %pip install numpy\n",
+    "\n",
+    "```ipython\n",
+    "%pip install numpy\n",
     "```"
    ]
   },
