--- a/notebooks/10-github-action.ipynb
+++ b/notebooks/10-github-action.ipynb
@@ -79,6 +79,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Création d'une paire de clés public/privée\n",
+    "\n",
+    "```bash\n",
+    "ssh-keygen -N \"\" -f ma_cle\n",
+    "```\n",
+    "\n",
+    "2 fichiers sont créés, la clé privée: ma_cle, et la clé publique ma_cle.pub.\n",
+    "\n",
+    "Aller sur GitHub et votre dépôt, dans l'onglet `Settings > Secret` puis `Add new secret`,\n",
+    "Nommé le secret `NBCOURSE_PRIV` et copier le contenu de la clé privée.\n",
+    "\n",
+    "Dans l'onglet `Settings > Deploy keys` cliquer sur `Add deploy key`,\n",
+    "Nommé la clé `NBCOURSE_PUB` et copier le contenu de la clé publique (ma_cle.pub).\n",
+    "\n",
+    "**IMPORTANT** : Cocher la case à coté de `Enable write access`.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
