--- a/notebooks/02-gitbasics.ipynb
+++ b/notebooks/02-gitbasics.ipynb
@@ -28,7 +28,8 @@
     "- Service web utilisant Git comme gestionnaire de version. \n",
     "- Github permet d'enregistrer et partager toutes les étapes de développement d'un logiciel ou de la rédaction d'un document au format texte au cours du temps. A tout moment vous pouvez revenir à une précedente version, l'ensemble de l'historique est toujours préservé. \n",
     "- Github permet d'organiser un travail collaboratif avec différents niveaux d'accès, la gestion des bugs et hébergement de la documentation.\n",
-    "- Github est la plus grande bibliothèque de codes du monde."
+    "- Github est la plus grande bibliothèque de codes du monde.\n",
+    "- Fonctionne de plus en plus comme un réseau social et offre une grande visibilité à vos travaux."
    ]
   },
   {
@@ -42,12 +43,12 @@
     "## SCM (Source Code Management)\n",
     "\n",
     "- Enregistrement des changements dans un ou plusieurs fichiers au cours du temps.\n",
-    "- Vous pouvez revenir a tout moment vers une version précedente.\n",
+    "- Vous pouvez revenir à tout moment vers une version précedente.\n",
     "- Fonctionne avec tout type de document.\n",
     "- Excellent moyen pour collaborer sur un même document.\n",
     "- Chaque modification enregistrée est datée avec le nom de son auteur.\n",
     "- Les figures proviennent du [Pro Git book](http://git-scm.com/book).\n",
-    "- Ce support est fortement inspiré de \"Become a git guru\" (https://www.atlassian.com/git/tutorials)."
+    "- Ce support est fortement inspiré de [\"Become a git guru\"](https://www.atlassian.com/git/tutorials)."
    ]
   },
   {
@@ -98,7 +99,9 @@
    "source": [
     "## Clonage du dépôt\n",
     "\n",
-    "git clone https://github.com/pnavaro/big-data.git"
+    "```bash\n",
+    "git clone https://github.com/pnavaro/agrocampus.git\n",
+    "```"
    ]
   },
   {
@@ -113,14 +116,16 @@
     "\n",
     "```bash\n",
     "git checkout -b my_branch\n",
-    "```"
+    "```\n",
+    "\n",
+    "Permet de \"figer\" une version personnelle locale sur laquelle vous pouvez travailler sans modifier la branche principale \"master\"."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Four File status in the repository\n",
+    "## Les différents états des fichiers dans la copie du dépôt\n",
     "  \n",
     "<img src=\"images/18333fig0201-tn.png\" alt=\"git\" width=\"450px\"/>"
    ]
@@ -154,7 +159,7 @@
    "execution_count": 1,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -168,7 +173,6 @@
       "Changes not staged for commit:\n",
       "  (use \"git add <file>...\" to update what will be committed)\n",
       "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\tmodified:   01-introduction.ipynb\n",
       "\tmodified:   02-gitbasics.ipynb\n",
       "\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
@@ -192,7 +196,9 @@
     "\n",
     "```bash\n",
     "git add your_notebook_copy.ipynb\n",
-    "```"
+    "```\n",
+    "\n",
+    "Cette commande est nécessaire pour un nouveau fichier mais aussi pour un fichier qui a été modifié."
    ]
   },
   {
@@ -203,17 +209,8 @@
     }
    },
    "source": [
-    "## Verification avant validation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
+    "## Verification avant validation\n",
+    "\n",
     "```bash\n",
     "git status\n",
     "```"
@@ -223,14 +220,14 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
-    "## Validation (commit)\n",
+    "## Validation et sauvegarde (commit)\n",
     "\n",
     "```bash\n",
-    "git commit -m 'Some modifications'\n",
+    "git commit -m 'A propos de mes modifications'\n",
     "```"
    ]
   },
@@ -242,7 +239,10 @@
     }
    },
    "source": [
-    "## Synchroniser avec la version distante sur le dépôt\n"
+    "## Synchroniser avec la version distante sur le dépôt\n",
+    "\n",
+    "La commande suivante permet de rappatrier toutes les modifications sur le dépôt distant (remote) sans modifier\n",
+    "votre version locale. Toutes les branches commencant par \"origin/\\*\" seront mises à jour.\n"
    ]
   },
   {
@@ -261,6 +261,37 @@
    "source": [
     "```bash\n",
     "git fetch origin\n",
+    "git branch -a   # pour voir toutes les branches\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Fusionner la branche distante avec la branche locale\n",
+    "\n",
+    "```bash\n",
+    "git merge origin/master\n",
+    "```\n",
+    "\n",
+    "Les deux étapes précédentes peuvent être effectuées en une seule commande avec\n",
+    "\n",
+    "```bash\n",
+    "git pull origin master\n",
+    "```\n",
+    "\n",
+    "Je déconseille cette approche car avec le `git fetch` on peut anticiper des conflits.\n",
+    "```bash\n",
+    "git diff origin/master\n",
+    "```\n",
+    "ou en version graphique si l'outil st installé sur votre poste:\n",
+    "```bash\n",
+    "git difftool origin/master\n",
     "```"
    ]
   },
@@ -274,10 +305,10 @@
    "source": [
     "## Résoudre les conflits\n",
     "\n",
-    "- En cas de problémes sur un fichier, vous pouvez annuler toutes les modifications avec :\n",
+    "- En cas de problèmes sur un fichier, vous pouvez annuler toutes les modifications non validées par un *commit* avec :\n",
     "\n",
     "```bash\n",
-    "git checkout notebook.ipynb\n",
+    "git checkout mon_fichier_modif\n",
     "```\n",
     "\n",
     "- Si vraiment il y a de gros soucis\n",
@@ -286,7 +317,7 @@
     "git reset --hard\n",
     "```\n",
     "\n",
-    "Attention cette dernière commande, annule tous les changments qui n'ont pas été validés."
+    "Attention cette dernière commande, annule tous les changments qui n'ont pas été validés par un *commit*."
    ]
   },
   {
@@ -315,6 +346,7 @@
    "lastCommId": null,
    "lastKernelId": null
   },
+  "celltoolbar": "Slideshow",
   "jupytext": {
    "cell_metadata_filter": "-all",
    "notebook_metadata_filter": "-all"
