--- a/notebooks/03-markdown.ipynb
+++ b/notebooks/03-markdown.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Markdown\n",
     "\n",
@@ -13,14 +17,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "La documentation des fonctions Julia est en markdown. Il n'y a pas de système de documentation intégré pour la langage R mais [roxygen2](https://cran.r-project.org/web/packages/roxygen2/) est le package utilisé. La syntaxe a des similarités avec [LaTeX](https://fr.wikipedia.org/wiki/LaTeX)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Les fichiers markdown sont identifiés par la terminaison `.md`.\n",
     "\n",
@@ -29,7 +41,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Titres\n",
     "\n",
@@ -52,7 +68,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## **Gras**, *italique*, `script`\n",
     "\n"
@@ -60,7 +80,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "## Citation\n",
     "\n",
@@ -69,7 +93,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Liste\n",
     "- Fruits\n",
@@ -84,7 +112,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Liste ordonnée\n",
     "\n",
@@ -96,7 +128,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "<ol>\n",
     "<li>Jeudi</li>\n",
@@ -108,9 +144,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Code\n",
+    "## Code R\n",
     "\n",
     "```r\n",
     "y <-  c(1,2,3,4,5)\n",
@@ -125,8 +165,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
+    "## Code Python\n",
+    "\n",
     "```py\n",
     "import numpy as np\n",
     "y =  np.array((1,2,3,4,5))\n",
@@ -141,8 +187,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
+    "## Code Julia\n",
+    "\n",
     "```jl\n",
     "using LinearAlgebra\n",
     "y =  [1,2,3,4,5]\n",
@@ -157,11 +209,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Lignes de séparation\n",
     "\n",
+    "- - -\n",
     "Il y a plusieurs possibilités, préférez les versions avec les espaces car cela peut être confondu avec des titres lors d'une conversion en html ou pdf.\n",
+    "- - - \n",
     "\n",
     "```markdown\n",
     "***\n",
@@ -173,14 +231,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Images"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "```markdown\n",
     "![texte alt](https://www.agrocampus-ouest.fr/files/images/logos/header/logo-agrocampus-ouest.png \"Logo Agrocampus\")\n",
@@ -191,14 +257,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "![Logo Agrocampus](images/logo-agrocampus-ouest.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Liens\n",
     "\n",
@@ -209,7 +283,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Tableaux\n",
     "\n",
@@ -228,7 +306,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Equations\n",
     "Les mathématiques sont écrites en langage LaTeX\n",
@@ -240,7 +322,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "\\begin{align}\n",
     "\\frac{d x_1(t) }{dt} &= \\frac{1}{\\varepsilon}v_1(t)  &\\qquad \\frac{d v_1(t) }{dt} &= E_1(t, x(t)) + \\frac{1}{\\varepsilon}v_2(t)\\\\\n",
@@ -251,7 +337,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "$$\n",
     "\\left(\n",
@@ -266,7 +356,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "$$\n",
     "\\begin{bmatrix}\n",
@@ -279,7 +373,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Les fonctionnalités peuvent être plus riches avec des emojis par example. Voir [Mastering Markdown](https://guides.github.com/features/mastering-markdown/)"
    ]
@@ -290,6 +388,7 @@
    "lastCommId": null,
    "lastKernelId": null
   },
+  "celltoolbar": "Slideshow",
   "jupytext": {
    "cell_metadata_filter": "-all",
    "main_language": "python",
