--- a/notebooks/04-docker.ipynb
+++ b/notebooks/04-docker.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Docker\n",
     "\n",
@@ -21,12 +25,18 @@
     "\n",
     "Technologie logicielle datant de 2013 permettant d'éxécuter un système d'exploitation isolé et automatisé dans un autre système. La technique est proche de la virtualisation mais sans l'inconvénient de la latence.\n",
     "\n",
-    "Un conteneur permet également de sauvegarder l'état d'un ordinateur à un instant donné et de pouvoir rédemmarrer de cet état à tout moment."
+    "Un conteneur permet également de sauvegarder l'état d'un ordinateur à un instant donné et de pouvoir rédemmarrer de cet état à tout moment.\n",
+    "\n",
+    "**Attention l'utilisation de docker nécessite une bonne connexion internet et beaucoup d'espace disque.**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "\n",
     "## Points forts\n",
@@ -38,29 +48,37 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Docker en 1 ligne\n",
     "\n",
     "Pour vérifier que docker est bien installé\n",
     "\n",
-    "```\n",
+    "```bash\n",
     "docker run helloworld\n",
     "```\n",
     "\n",
-    "```\n",
-    "docker run --rm -it ubuntu /bin/bash\n",
+    "```bash\n",
+    "docker run --rm -it -v $PWD:/work ubuntu /bin/bash\n",
     "```\n",
     "- `run` : on veut lancer le conteneur\n",
     "- `-it` : on veut un terminal et être interactif avec lui \n",
     "- `ubuntu` : l’image à utiliser pour ce conteneur \n",
     "- `/bin/bash` : commande éxécutée au démarrage qui permet l'interactivité\n",
-    "\n"
+    "- `-v $PWD:/work` : le répertoire courant sera monté dans l'image docker sous la racine `/work`\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Les étapes du démarrage d'un image docker\n",
     "\n",
@@ -72,7 +90,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Principales commandes sur linux\n",
     "\n",
@@ -93,26 +115,50 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Création d'images Docker\n",
     "\n",
-    "Il est possible de créer une image docker en utilisant des commandes en ligne mais préférez la méthode du fichier Dockerfile qui vous permettra de conserver les etapes et une trace de la procédure.\n",
-    "\n",
-    "### Premier Dockerfile\n",
-    "\n",
+    "Il est possible de créer une image docker en utilisant des commandes en ligne mais préférez la méthode du fichier Dockerfile qui vous permettra de conserver les etapes et une trace de la procédure."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Dockerfile rocker/shiny"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "```dockerfile\n",
-    "FROM rocker/shiny\n",
+    "FROM rocker/r-ver:3.6.3\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "```dockerfile\n",
-    "FROM rocker/r-ver:3.6.3\n",
-    "\n",
     "RUN apt-get update && apt-get install -y \\\n",
     "    sudo \\\n",
     "    gdebi-core \\\n",
@@ -123,8 +169,18 @@
     "    libxt-dev \\\n",
     "    xtail \\\n",
     "    wget\n",
-    "\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "```dockerfile\n",
     "# Download and install shiny server\n",
     "RUN wget --no-verbose https://download3.rstudio.org/ubuntu-14.04/x86_64/VERSION -O \"version.txt\" && \\\n",
     "    VERSION=$(cat version.txt)  && \\\n",
@@ -135,18 +191,55 @@
     "    R -e \"install.packages(c('shiny', 'rmarkdown'), repos='$MRAN')\" && \\\n",
     "    cp -R /usr/local/lib/R/site-library/shiny/examples/* /srv/shiny-server/ && \\\n",
     "    chown shiny:shiny /var/lib/shiny-server\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "```dockerfile\n",
     "EXPOSE 3838\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "```dockerfile\n",
     "COPY shiny-server.sh /usr/bin/shiny-server.sh\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "```dockerfile\n",
     "CMD [\"/usr/bin/shiny-server.sh\"]\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Instructions\n",
     "\n",
@@ -161,11 +254,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Docker Hub\n",
     "\n",
-    "Site public permettant de sauvegarder et partager ses images docker:\n",
+    "Site public permettant de sauvegarder et partager ses images docker (registry), il faut:\n",
     "\n",
     "- Déposer son fichier Dockerfile sur un dépôt github\n",
     "- Créer une image docker sur <https://hub.docker.com> et lier cette image au dépôt github\n",
@@ -173,23 +270,6 @@
     "    \n",
     "    "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercice\n",
-    "\n",
-    "- Creez un dépôt github personnel et déposer le ficher Dockerfile\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -197,6 +277,7 @@
    "lastCommId": null,
    "lastKernelId": null
   },
+  "celltoolbar": "Slideshow",
   "jupytext": {
    "encoding": "# -*- coding: utf-8 -*-",
    "formats": "ipynb,../src//py"
