--- a/notebooks/05-binder.ipynb
+++ b/notebooks/05-binder.ipynb
@@ -204,7 +204,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Fichier `install.R` pour les dépendances:\n",
     "    \n",
