--- a/notebooks/09-exemple-r.ipynb
+++ b/notebooks/09-exemple-r.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Exemple R"
    ]
@@ -10,7 +14,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "options(jupyter.plot_mimetypes = c(\"text/plain\", \"image/png\" )) "
@@ -21,7 +29,10 @@
    "execution_count": 2,
    "metadata": {
     "echo": true,
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -48,6 +59,9 @@
    "execution_count": 3,
    "metadata": {
     "message": false,
+    "slideshow": {
+     "slide_type": "slide"
+    },
     "warning": false
    },
    "outputs": [
@@ -71,13 +85,6 @@
     "library(ggplot2)\n",
     "ggplot(donnees)+aes(x=X1,y=X2,color=Y)+geom_point()+theme_classic()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -85,6 +92,7 @@
    "lastCommId": null,
    "lastKernelId": null
   },
+  "celltoolbar": "Slideshow",
   "jupytext": {
    "cell_metadata_filter": "echo,warning,message,-all",
    "main_language": "R",
