--- a/notebooks/08-exemple-python.ipynb
+++ b/notebooks/08-exemple-python.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Exemple Python"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "## Documentation de fonction"
    ]
@@ -17,7 +25,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "def bspline(p, j, x):\n",
@@ -56,7 +68,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# print(bspline.__doc__)"
@@ -66,7 +82,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -81,7 +100,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -94,7 +116,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -110,7 +135,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "Y[(X1 <= 0.25) & (U  <= seuil)] = 1\n",
@@ -122,7 +151,10 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -166,6 +198,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "jupytext": {
    "cell_metadata_filter": "-all",
    "encoding": "# coding: utf-8",
