--- a/notebooks/10-github-action.ipynb
+++ b/notebooks/10-github-action.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Github Action\n",
     "\n",
@@ -16,9 +20,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Exemple\n",
+    "## Exemple \n",
+    "\n",
+    "Outils informatiques pour le big-data <http://pnavaro.github.io/big-data>\n",
     "\n",
     "```yaml\n",
     "name: Build and Deploy\n",
@@ -26,6 +36,18 @@
     "  push:\n",
     "    branches:\n",
     "      - master\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "```yaml\n",
     "jobs:\n",
     "  build-and-deploy:\n",
     "    runs-on: ubuntu-latest\n",
@@ -38,6 +60,18 @@
     "      uses: actions/checkout@v2\n",
     "      with:\n",
     "        persist-credentials: false\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "```yaml\n",
     "    - name: Install SSH Client\n",
     "      uses: webfactory/ssh-agent@v0.2.0\n",
     "      with:\n",
@@ -46,6 +80,18 @@
     "      uses: actions/setup-java@v1\n",
     "      with:\n",
     "        java-version: 1.8\n",
+    "```       "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "```yaml\n",
     "    - name: Download Apache Spark\n",
     "      uses: wei/wget@v1\n",
     "      with:\n",
@@ -55,6 +101,18 @@
     "    - uses: Actions-R-Us/default-env@v1\n",
     "      env:\n",
     "        SPARK_HOME: '/home/runner/spark-3.0.0-bin-hadoop2.7'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "```yaml\n",
     "    - name: Install Miniconda and dependencies\n",
     "      uses: goanpeca/setup-miniconda@v1\n",
     "      with:\n",
@@ -80,7 +138,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Création d'une paire de clés public/privée\n",
     "\n",
@@ -99,16 +161,10 @@
     "**IMPORTANT** : Cocher la case à coté de `Enable write access`.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
