--- a/notebooks/01-jupyter.ipynb
+++ b/notebooks/01-jupyter.ipynb
@@ -33,17 +33,8 @@
     "conda env create -n agrocampus\n",
     "```\n",
     "\n",
-    "[documentation](https://conda.io/docs/using/envs.html)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
+    "[documentation](https://conda.io/docs/using/envs.html).\n",
+    "\n",
     "L'environnement est créé a partir d'un fichier nommé `environment.yml` qui contient la liste des packages dont nous avons besoin."
    ]
   },
@@ -73,17 +64,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "**Cette opération doit être renouvelée à chaque fois que l'on ouvre un nouveau terminal**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -105,11 +85,10 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
-    "## Installation with conda\n",
     "```bash\n",
     "conda install -c conda-forge jupyter\n",
     "```"
@@ -205,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -216,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -672,7 +651,7 @@
    "execution_count": 28,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -713,7 +692,11 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "outputs": [],
    "source": [
     "import IPython.core\n",
@@ -723,7 +706,11 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -741,7 +728,11 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -891,7 +882,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
